k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: backend
          image: aamash18/chat-backend:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chat-backend
  namespace: chat-app
spec:
  selector:
    app: chat-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
