k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
        - name: frontend
          image: aamash18/chat-frontend:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: chat-frontend
  namespace: chat-app
spec:
  selector:
    app: chat-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
